Opened 15 years ago
Closed 15 years ago
#5608 closed bug (fixed)
[IPv6] [PATCH] struct ipv6_mreq missing
Reported by: | andreasf | Owned by: | axeld |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is supposed to be defined in netinet/in.h
according to The Open Group Base Specifications Issue 7.
http://www.opengroup.org/onlinepubs/9699919799/basedefs/netinet_in.h.html#tag_13_32
Mono assumes its availability when AF_INET6
is defined.
Attachments (2)
Change History (7)
comment:1 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
by , 15 years ago
Attachment: | ipv6_mreq.diff added |
---|
comment:2 by , 15 years ago
I've attached a patch adding the structure in netinet6/in6.h
, but it appears there are some IPV6_
* defines missing in netinet/in.h
as well.
comment:3 by , 15 years ago
Summary: | [IPv6] struct ipv6_mreq missing → [IPv6] [PATCH] struct ipv6_mreq missing |
---|
I've added a patch adding stub definitions for some POSIX IPv6 socket options.
This lets Mono compile without IPv6 disabled. I did not test however how getsockopt
/setsockopt
behave at runtime with such fake definitions.
comment:4 by , 15 years ago
Thanks for the patches. However, you can leave "unimplemented" comments out as IPv6 isn't implemented at all yet. Much more helpful would be the length of the command to use in the setsockopt() call.
Anyway, I'll look into this tomorrow, and will apply your patches then, thanks!
comment:5 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Added in hrev35934, thanks!
proposed patch