* Added missing IPv6 defines based on a patch by Andreas FÃ¤rber in bug #5608.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35934 a95241bf-73f2-0310-859d-f6bbb57e9c96